fixed alignment adjusted padding

--- a/src/pages/OrderConfirmationPage/orderConfirmationPage.css
+++ b/src/pages/OrderConfirmationPage/orderConfirmationPage.css
@@ -15,6 +15,7 @@
 
 .orderInnerContainer {
     background-color: rgb(255, 255, 255);
+    border: 1px solid rgb(225, 225, 225);
     border-top-right-radius: 1rem;
     border-bottom-left-radius: 1rem;
     width: 75%;
@@ -34,6 +35,7 @@
     flex-flow: column;
     align-items: center;
     gap: 2rem;
+    text-align: center;
 }
 
 .orderKoanaIconStamp {
@@ -53,7 +55,6 @@
     font-weight: bold;
     background-color: #51cf85;
     color: white;
-    text-align: center;
     text-transform: uppercase;
     letter-spacing: .2rem;
 }
@@ -74,6 +75,7 @@
 @media screen and (max-width: 700px) {
     .orderUserDataContainer {
         flex-direction: column;
+        text-align: center;
     }
     .orderConfirmationMessageBanner {
         font-size: .75rem;
@@ -217,18 +219,20 @@
     border-bottom: 1px solid rgb(215, 215, 215);
     display: flex;
     flex-flow: column;
-    gap: 1rem;
+    gap: 3rem;
+    text-align: center;
 }
 
 .orderContactKoana {
     padding-top: .5rem;
-    padding-left: .5rem;
     font-family: "Allura", cursive;
-    font-size: 3rem;
+    font-size: 2.5rem;
+    letter-spacing: -.15rem;
 }
 
 .orderContactPhone {
     width: 100%;
     padding: 1.5rem 0rem 0rem;
+    color: rgb(180, 180, 180);
     text-align: center;
 }
